# opal

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
demos/: CMakeLists.txt  bst.cpp  counting_sort.cpp  heap_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp
include/opal/: concepts.hpp  counting_sort.hpp  heap_sort.hpp  heap_sort.inl  insertion_sort.hpp  insertion_sort.inl  merge_sort.hpp  merge_sort.inl  opal.hpp  quick_sort.hpp  radix_sort.hpp  radix_sort.inl  thread_pool.hpp  thread_pool.inl
include/opal/bst/: bst.hpp  bst.inl  bst_iterator.hpp  bst_iterator.inl  bst_node.hpp
include/opal/linsort/: counting_sort.hpp  counting_sort.inl  radix_sort.hpp  radix_sort.inl
include/opal/sort/: heap_sort.hpp  insertion_sort.hpp  merge_sort.hpp  quick_sort.hpp  quick_sort.inl
latex/: bst.tex  counting-sort.tex  heap-sort.tex  insertion-sort.tex  intro.tex  merge-sort.tex  opal.tex  quick-sort.tex  radix-sort.tex
manim/: cute-bass.txt
manim/src/: bst.py  counting_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  radix_sort.py
scripts/: cmake  format  latexmk  manim
